add function to train with elmo

--- a/WSD.ipynb
+++ b/WSD.ipynb
@@ -21,12 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "sns.set(rc={'figure.figsize':(16,10)})\n",
+    "sns.set(rc={'figure.figsize':(16,10)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Prepare Data for Bert Graphs\n",
     "data_file = \"all_lemmas_20-max_layer_0.csv\"\n",
     "df = pd.read_csv(data_file)\n",
     "freq_dict = create_sense_freq_dict()\n",
@@ -2458,6 +2467,19 @@
     "specs = sns.barplot(x=\"spec\", y=\"best_avg_acc\", data=spec_data)\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Elmo goes below here.\n",
+    "elmo_df = pd.read_csv(data_file)\n",
+    "elmo_df = pd.concat([elmo_df, elmo_df[\"sense1\"].apply(get_freq).rename(\"sense1_freq\")], axis=1)\n",
+    "elmo_df = pd.concat([elmo_df, elmo_df[\"sense2\"].apply(get_freq).rename(\"sense2_freq\")], axis=1)\n",
+    "elmo_df = elmo_df.sort_values(by=\"best_avg_acc\")"
    ]
   }
  ],
