Add detailed descriptions to WSD.ipynb

--- a/old/WSD.ipynb
+++ b/old/WSD.ipynb
@@ -38,6 +38,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "We use Language Model representations as inputs to our classifier for the binary WSD task. We pick the two most common senses of a lemma in the dataset. The binary WSD dataset is generated from pairing all possible instances in the Google WSD Corpora with those two senses. A classifier takes the concatenation of representations of two target words as input and predict if they have the same sense or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BERT\n",
+    "\"bert_all_lemmas_data.csv\" stores the predictions of the classifier that takes BERT representations on the constructed dataset. We load in the data and summarize the predictions by lemma. `sense1` and `sense2` are the two most common senses of the lemma. `pos1` and `pos2` are the part of speech of `sense1` and `sense2` respectively. `sense1_freq` and `sense2_freq` are the numbr of occurrences of the `sense1` and `sense2` respectively."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -52,6 +68,13 @@
     "df = pd.concat([df, df[\"sense1\"].apply(get_freq).rename(\"sense1_freq\")], axis=1)\n",
     "df = pd.concat([df, df[\"sense2\"].apply(get_freq).rename(\"sense2_freq\")], axis=1)\n",
     "df = df.sort_values(by=\"best_avg_acc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take a peek at the summary:"
    ]
   },
   {
@@ -957,6 +980,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average Precision by Lemma (BERT)\n",
+    "We rank the lemmas by their average prediction precisions below. We can see that most lemmas have an average prediction accuracies of less than 60%."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -984,6 +1015,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average Precision and Part Of Speech (BERT)\n",
+    "We now look at the prediction precision distribution of the lemma whose two most common senses have the same POS. We can see that a significantly higher portion of the lemmas have a average precision lower than 60% compared to all lemmas. This tell us that the binary WSD with same POS are more difficult to disambiguate."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -1008,6 +1047,13 @@
     "    bottom=False,      # ticks along the bottom edge are off\n",
     "    labelbottom=False)\n",
     "same_pos_graph = sns.barplot(x=\"lemma\", y=\"best_avg_acc\", data=same_pos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Naturally, we want to look at the average precision distribution of the lemmas with the same POS. We can see that a majority of those lemmas have a verage precision higher than 60%."
    ]
   },
   {
@@ -1043,8 +1089,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "with open(\"data/sense_to_pofs_dict.json\") as f:\n",
     "    sense_pos_dict = json.load(f)\n",
     "        \n",
@@ -2024,6 +2068,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we look at how different POS pairs affect difficulty of the binary WSD task. We plot the average precisoin against different POS pairs in a bar plot. Noun-verb, noun-adjective, and adjective-verb pairs are easier is disambiguate. Notice that all the POS pairs with the same POS all have average precision lower than 60%, which is consistent with the observations above."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -2046,6 +2097,14 @@
     "\"ADV, ADV\",\"ADJ, ADJ\",\"NOUN, NOUN\", \"ADJ, ADV\", \"NOUN, VERB\", \"ADJ, NOUN\", \"ADJ, VERB\"])] \n",
     "df_with_pos_combo\n",
     "diff_pos_graph = sns.barplot(x=\"pos_combo\", y=\"best_avg_acc\", data=df_with_pos_combo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Effect Of The Amount of Data on Performance (BERT)\n",
+    "In this section, we investigate the effect of the amount of training data on the performance. The training data is unevenly distributed among lemmas in the Google WSD Corpora. Does lemmas with fewer training examples perform worse than those with more? In the scatterplot below, each dot is a lemma. On the x-axis is the number of training examples the lemma has, and on y-axis its average precision on the test examples. We can see that the average precision is poorly correlated with the logarithmic amount of training examples."
    ]
   },
   {
@@ -2092,6 +2151,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input Embeddings (BERT)\n",
+    "Conventionally, one uses the last hidden state of a language model (in our case, BERT) as the input embedding to the classifier. We are curious if combinations of hidden states can improve the performance. In the bar plot below, we plot the average precision of several of those combinations on the lemmas with 70% or higher average precision (we will call those lemmas **high precision lemmas** from now on) using the last hidden state. `[n]` is the `n`-th hidden when `n`>0. `[8, 10, True]` means the eighth and tenth hidden states are averaged, while `[8, 10]` means the eighth hidden and tenth hidden states are concatenated.\n",
+    "\n",
+    "We can see that the average precision does not vary significantly among different hidden states and combinations of hidden states, averaged or concatenated."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -2117,27 +2186,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8128626666666666"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "with open(\"data/bert_all_lemmas_data.csv\") as f:\n",
-    "    data = pd.read_csv(f)\n",
-    "    data = data[data[\"best_avg_acc\"] >= 0.7][\"best_avg_acc\"]\n",
-    "    default_avg = data.mean()\n",
-    "default_avg"
+    "## Auxiliary Input (BERT)\n",
+    "One of the possible reasons is for the poor performance from BERT is that its representations does not encode enough contextual information to help the disambiguation. In this section, we see how auxiliary representations of words around the target word can be incorporated to improve the classifier's performance on WSD significantly.\n",
+    "\n",
+    "We experiment several ways of incorporating auxiliary representations. `avg_both/left/right` averages the BERT representation of the target word and the representation(s) of the two/left/right word(s) surrounding it. Similarly `concat_both/left/right` concatenates the BERT representation of the target word and the representation(s) of the two/left/right word(s) surrounding it.\n",
+    "\n",
+    "We plot the average precisions on the high precision lemmas with different incorporations of auxiliary representations in the bar plot below. We also compare those precisions with the baseline marked as `default` in the barplot (no auxiliary input)."
    ]
   },
   {
@@ -2163,6 +2220,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ELMo\n",
+    "We repeat all the experiments from above with ELMo inputs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -2172,6 +2237,13 @@
     "elmo_file = \"data/elmo_all_lemmas_data.csv\"\n",
     "elmo_df = pd.read_csv(elmo_file)\n",
     "elmo_df = elmo_df.sort_values(by=\"best_avg_acc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we take a peek at the summary for ELMo."
    ]
   },
   {
@@ -3077,6 +3149,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average Precision by Lemma (ELMo)\n",
+    "we plot rank the lemmas by their average precision and plot them in the bar plot below. We can see that a majority of lemmas have average precision higher than 60%, and it is obvious that ELMo has outperformed BERT on the binary WSD task, contrary the popular belief that BERT is the state of the art."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -3104,6 +3184,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average Precision and Part Of Speech (ELMo)\n",
+    "Below we plot the average precision distribution of lemmas whose two chosen sense have different POS."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -3128,6 +3216,13 @@
     "    bottom=False,      # ticks along the bottom edge are off\n",
     "    labelbottom=False)\n",
     "elmo_same_pos_graph = sns.barplot(x=\"lemma\", y=\"best_avg_acc\", data=elmo_same_pos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below we plot the average precision distribution of lemmas whose two chosen sense have the same POS. Similar to BERT, lemmas with the same POS for both senses have higher average precision."
    ]
   },
   {
@@ -4145,6 +4240,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We plot the average precision of different POS pairs below. ELMo performs significantly better than BERT on same POS instances."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -4167,6 +4269,14 @@
     "\"ADV, ADV\",\"ADJ, ADJ\",\"NOUN, NOUN\", \"ADJ, ADV\", \"NOUN, VERB\", \"ADJ, NOUN\", \"ADJ, VERB\"])]\n",
     "\n",
     "elmo_diff_pos_graph = sns.barplot(x=\"pos_combo\", y=\"best_avg_acc\", data=elmo_df_with_pos_combo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Effect Of The Amount of Data on Performance (ELMo)\n",
+    "Similar to BERT, the amount of training data available is very weakly correlated to the performance of ELMo on the lemma"
    ]
   },
   {
@@ -4227,6 +4337,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Auxiliary Input (ELMo)\n",
+    "From below, we can see that although auxiliary input improves the performance slightly compared to the `default` (no auxiliary inputs), it does not improve as much as it does for BERT."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -4272,7 +4390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
